--- a/el-gamal.tex
+++ b/el-gamal.tex
@@ -152,7 +152,7 @@
             f_1 = g^{h(m)} \mod p, \\
             f_2 = y^a a^b \mod p; \\
         \end{array} \]
-    \item сравнивает значения $f_1$ и $f_2$, если
+    \item сравнивает значения $f_1$ и $f_2$; если
         \[ f_1 = f_2, \]
         то подпись подлинная, в противном случае -- фальсифицированная (или случайно испорченная).
 \end{itemize}
