--- a/kerberos.tex
+++ b/kerberos.tex
@@ -1,7 +1,7 @@
 \section{Система Kerberos для локальной сети}
 \selectlanguage{russian}
 
-Система аутентификации и распределения ключей Kerberos основана на протоколе Нидхема~---~Шрёдера. Самые известные реализации протокола Kerberos включают Microsoft Active Directory и ПО Kerberos с открытым кодом для Unix.
+Система аутентификации и распределения ключей Kerberos основана на протоколе Нидхема~---~Шрёдера. Самые известные реализации протокола Kerberos включены в Microsoft Active Directory и ПО Kerberos с открытым кодом для Unix.
 
 Протокол предназначен для решения задачи аутентификации и распределения ключей в рамках локальной сети, в которой есть группа пользователей, имеющих доступ к набору сервисов, для которых требуется обеспечить единую аутентификацию. Протокол Kerberos использует только симметричное шифрование. Секретный ключ используется для взаимной аутентификации.
 
