--- a/linear-congruential-generator.tex
+++ b/linear-congruential-generator.tex
@@ -7,7 +7,7 @@
 Числа $a, c, m$, $ 0 < a < m, 0 < c < m$ являются параметрами алгоритма.
 
 \example
-Для параметров $a = 2, c = 3, m = 5$ и начального состояния $x_0 = 1$ получаем последовательность: $0, 3, 4, 0, 3, 4, \dots$
+Для параметров $a = 2, c = 3, m = 5$ и начального состояния $x_0 = 1$ получаем последовательность: $0, 3, 4, 1, 0, \dots$
 \exampleend
 
 Максимальный период ограничен значением $m$. Но максимум периода достигается тогда и только тогда, когда~\cite[Линейный конгруэнтный метод]{Knuth:2001:2}:
