--- a/stream-ciphers.tex
+++ b/stream-ciphers.tex
@@ -1,7 +1,7 @@
 \chapter{Потоковые шифры}\label{chapter-stream-ciphers}
 \selectlanguage{russian}
 
-Потоковые шифры осуществляют посимвольное шифрование открытого текста. Под символом алфавита открытого текста могут пониматься как отдельные биты (побитовое шифрование), так и байты (побайтовое шифрование). Общий вид большинства потоковых шифров приведён на рис.~\ref{fig:stream-cipher}.
+Потоковые шифры осуществляют посимвольное шифрование открытого текста. Под символом алфавита открытого текста могут пониматься как отдельные биты (побитовое шифрование), так и байты (побайтовое шифрование). Поэтому можно говорить о в какой-то мере условном разделении блочных и поковых шифров: например 64-битная буква - один блок. Общий вид большинства потоковых шифров приведён на рис.~\ref{fig:stream-cipher}.
 
 \begin{figure}[hb]
 	\centering
@@ -18,7 +18,7 @@
 	\item На стороне легального получателя с символами шифртекста и гаммы выполняется обратная операция (для XOR это будет просто повторный XOR) для получения открытого текста.
 \end{itemize}
 
-Очевидно, что криптостойкость потоковых шифров непосредственно основана на стойкости используемых ГПСЧ. Большой размер инициализирующей последовательности, длинный период, большая линейная сложность -- необходимые атрибуты используемых генераторов.
+Очевидно, что криптостойкость потоковых шифров непосредственно основана на стойкости используемых ГПСЧ. Большой размер инициализирующей последовательности, длинный период, большая линейная сложность -- необходимые атрибуты используемых генераторов. Одним из преимуществ потоковых шифров по сравнению с блочными является более высокая скорость работы.
 
 Одним из примеров ненадёжных потоковых шифров является семейство A5\index{шифр!A5} (A5/1, A5/2), кратко рассмотренное в разделе~\ref{section:majority_generators}. Мы также рассмотрим вариант простого в понимании шифра RC4, не основанного на РСЛОС.
 
