--- a/MAC.tex
+++ b/MAC.tex
@@ -58,7 +58,7 @@ $\textrm{ipad}$ -- последовательность повторяющихс
 Двойное хэширование\index{двойное хэширование} с ключом в
     \[ \HMAC(K, m) = H(K \| H(K \| m)) \]
 применяется для защиты от атаки на расширение сообщений. Вычисление хэш-функции от сообщения $m$, состоящего из $n$ блоков $m_1 m_2 \dots m_n$, можно записать в виде:
-    \[ H_i = f(H_{i-1}, m_i), ~ H_0 \equiv IV = \textrm{const}, ~ H(m) \equiv H_n, \]
+    \[ H_i = f(H_{i-1}, m_i), ~ i = 1, 2, \dots, n, ~ H_0 \equiv IV = \textrm{const}, ~ H(m) \equiv H_n, \]
 где $f$ -- известная сжимающая функция.
 
 Пусть имитовставка использует одинарное хэширование с ключом:
