--- a/hash-functions.tex
+++ b/hash-functions.tex
@@ -41,7 +41,7 @@
 
 Свойство однонаправленности, в частности, означает, что если в аргументе $x$ меняется хотя бы один символ, то для любого $x$ значение функции $H(x)$ меняется непредсказуемо.
 
-\emph{Криптографической хэш-функцией} $H(x)$ называется хэш-функция, имеющая следующие свойства:
+\emph{Криптографически стойкой хэш-функцией} $H(x)$ называется хэш-функция, имеющая следующие свойства:
 \begin{itemize}
     \item однонаправленность: \emph{вычислительно невозможно} по значению функции найти прообраз;
     \item \emph{слабая устойчивость к коллизиям}\index{устойчивость к коллизиям} (слабо бесконфликтная функция): для заданного аргумента $x$ \emph{вычислительно невозможно} найти другой аргумент $y \neq x: ~ H(x) = H(y)$;
