--- a/perfect_secure_systems.tex
+++ b/perfect_secure_systems.tex
@@ -60,7 +60,7 @@ H(K)\geq H(K|C)\geq H(M|C).
 \end{gather*}
 Отсюда получаем:
  \[ I(M; C) = H(M) - H(M | C)\geq H(M)-H(K). \]
-Из последнего неравенства следует, что взаимная информация между сообщением и шифртекстом равна нулю, если энтропия ключа не меньше энтропии сообщений. С другой стороны, взаимная информация между сообщением и шифртекстом равна нулю, если они статистически независимы. Таким образом, условием совершенной криптостойкости является неравенство:
+Из последнего неравенства следует, что взаимная информация между сообщением и шифртекстом равна нулю, если энтропия ключа не меньше энтропии сообщений либо они статистически независимы. Таким образом, условием совершенной криптостойкости является неравенство:
 \[ H(M) \leq H(K).\]
 %Если утверждение верно, то количество информации в шифртексте относительно открытого текста $I(M; C)$ равно нулю:
 %  \[ I(M; C) = H(M) - H(M | C) = 0, \]
