--- a/sts.tex
+++ b/sts.tex
@@ -16,11 +16,11 @@
 \begin{enumerate}
     \item Сторона $A$ создаёт секретное случайное число $2 \leq x \leq p-1$ и отправляет $B$:
             \[ A \rightarrow B: ~ g^x \mod p. \]
-    \item Сторона $B$ создаёт секретное случайное число $2 \leq y \leq p-1$, вычисляет общий секретный ключ
+    \item Сторона $B$ создаёт секретное случайное число $2 \leq y \leq p-1$, вычисляет общий секретный ключ:
             \[ K = (g^x)^y = g^{xy} \mod p, \]
         с помощью которого создаёт шифрованное сообщение $E_K(S_B(g^x, g^y))$ для аутентификации, и отправляет $A$:
             \[ A \leftarrow B: ~ \left( g^y \mod p, ~~ E_K( S_B( g^x, g^y)) \right). \]
-    \item Сторона $A$ с помощью $x, g^y \mod p$ вычисляет общий секретный ключ
+    \item Сторона $A$ с помощью $x, g^y \mod p$ вычисляет общий секретный ключ:
             \[ K = (g^y)^x \mod p = g^{xy} \mod p \]
         и расшифровывает сообщение:
             \[ D_K( E_K( S_B( g^x, g^y))) = S_B( g^x, g^y). \]
