--- a/el-gamal.tex
+++ b/el-gamal.tex
@@ -233,7 +233,7 @@
 Рассмотрим возможные способы нахождения неизвестного числа $x$. Начнём с перебора различных значений $x$ из интервала $0<x<p-1$ и проверки равенства $y=g^{x} \mod p$. Число попыток в среднем равно $\frac{p}{2}$, при $p=2^{1024}$ это число равно $2^{1023}$, что на практике неосуществимо.
 
 Другой подход предложен советским математиком Гельфондом в 1962 году \index{алгоритм!Гельфонда} безотносительно к криптографии. Он состоит в следующем.
-Вычислим $S=\left\lceil\sqrt{p-1}\right\rceil $, где скобки означают ближайшее (сверху) целое от числа $\sqrt{p-1} $.
+Вычислим $S=\left\lceil\sqrt{p-1}\right\rceil $, где скобки означают наименьшее целое, которое не меньше $\sqrt{p-1} $.
 
 Представим искомое число $x$ в следующем виде:
 
