--- a/tls.tex
+++ b/tls.tex
@@ -154,7 +154,7 @@
 Протокол записи (\langen{Record Protocol}) определяет формат TLS-пакетов для вложения в TCP-пакеты.
 
 \begin{enumerate}
-    \item Исходными сообщениями $M$ для шифрования являются пакеты протокола следующего уровня в модели OSI: HTTP\index{протокол!HTTP}, FTP\index{протокол!FTP}, IMAP\index{протокол!IMAP} и~т.\,д.
+    \item Исходными сообщениями $M$ для шифрования являются пакеты протокола следующего(прикладного) уровня в модели OSI: HTTP\index{протокол!HTTP}, FTP\index{протокол!FTP}, IMAP\index{протокол!IMAP} и~т.\,д.
     \item Сообщение $M$ разбивается на блоки $m_i$ размером не более 16 кБ.
     \item Блоки $m_i$ сжимаются алгоритмом компрессии в блоки $z_i$.
     \item Вычисляется имитовставка\index{имитовставка} для каждого блока $z_i$ и добавляется в конец блоков: $a_i = z_i ~\|~ \HMAC(K_{\MAC}, z_i)$.
