Replace month names with numbers (biber / biblatex warning)

--- a/Information Security.tex
+++ b/Information Security.tex
@@ -50,6 +50,7 @@
   backend=biber,
   hyperref=auto,
   language=auto,
+  autolang=other,
   citestyle=gost-numeric,
   defernumbers=true,
   bibstyle=gost-numeric,
