--- a/bibliography.bib
+++ b/bibliography.bib
@@ -23,7 +23,7 @@
 	year		= {1929},
 	volume		= {36},
 	number		= {6},
-	month		= {jun},
+	month		= {6},
 	pages		= {306--312},
 	publisher	= {Mathematical Association of America},
 	doi		= {10.2307/2298294},
@@ -37,7 +37,7 @@
 	year		= {1931},
 	volume		= {38},
 	number		= {3},
-	month		= {mar},
+	month		= {3},
 	pages		= {135--154},
 	publisher	= {Mathematical Association of America},
 	doi		= {10.2307/2300969},
@@ -52,7 +52,7 @@
 	volume		= {27},
 	number		= {3},
 	pages		= {379--423},
-	month		= {jul},
+	month		= {7},
 	year		= {1948},
 	issn		= {0005-8580},
 	doi		= {10.1002/j.1538-7305.1948.tb01338.x},
@@ -67,7 +67,7 @@
 	volume		= {27},
 	number		= {4},
 	pages		= {623--656},
-	month		= {oct},
+	month		= {10},
 	year		= {1948},
 	issn		= {0005-8580},
 	doi		= {10.1002/j.1538-7305.1948.tb00917.x},
@@ -82,7 +82,7 @@
 	volume		= {28},
 	number		= {4},
 	pages		= {656--715},
-	month		= {oct},
+	month		= {10},
 	year		= {1949},
 	CODEN		= {BSTJAN},
 	ISSN		= {0005-8580},
@@ -97,7 +97,7 @@
 	journal		= {Annals of Mathematics},
 	volume		= {50},
 	number		= {2},
-	month		= {apr},
+	month		= {4},
 	year		= {1949},
 	pages		= {305--313},
 	doi		= {10.2307/1969455},
@@ -130,7 +130,7 @@
 	title		= {Prediction and Entropy of Printed English},
 	journal		= {The Bell System Technical Journal},
 	volume		= {30},
-	month		= {jan},
+	month		= {1},
 	year		= {1951},
 	pages		= {50--64},
 	issn		= {0005-8580},
@@ -194,7 +194,7 @@
 	pagetotal	= {451},
 	address		= {Providence, R.I.},
 	year		= {1971},
-	month		= {jun},
+	month		= {6},
 	isbn		= {0-8218-1420-6},
 	language	= {English},
 }
@@ -206,7 +206,7 @@
 	volume		= {228},
 	number		= {5},
 	pages		= {15--23},
-	month		= {may},
+	month		= {5},
 	year		= {1973},
 	doi		= {10.1038/scientificamerican0573-15},
 	issn		= {0036-8733 (print), 1946-7087 (electronic)},
@@ -223,7 +223,7 @@
 	journal		= {Technical Report 2547},
 	keywords	= {security},
 	location	= {Massachusetts},
-	month		= {mar},
+	month		= {3},
 	posted-at	= {2010-06-01 20:09:01},
 	priority	= {2},
 	title		= {Secure Computer Systems: Mathematical Foundations},
@@ -250,7 +250,7 @@
 	journal		= {Information Theory, IEEE Transactions on},
 	title		= {New directions in cryptography},
 	year		= {1976},
-	month		= {nov},
+	month		= {11},
 	volume		= {22},
 	number		= {6},
 	pages		= {644--654},
@@ -280,7 +280,7 @@
 	title		= {Riemann's Hypothesis and Tests for Primality},
 	journal		= {Journal of Computer and System Sciences},
 	year		= {1976},
-	month		= {December},
+	month		= {12},
 	volume		= {13},
 	number		= {3},
 	pages		= {300--317},
@@ -308,7 +308,7 @@
 	journal		= {Communications of the ACM},
 	volume		= {22},
 	number		= {11},
-	month		= nov,
+	month		= {11},
 	year		= {1979},
 	issn		= {0001-0782},
 	pages		= {612--613},
@@ -426,7 +426,7 @@
 	title		= {Department of Defense Trusted Computer System Evaluation Criteria},
 	organization	= {Department of Defense},
 	year		= {1985},
-	month		= {dec},
+	month		= {12},
 	day		= {26},
 	note		= {DOD 5200.28-STD (supersedes CSC-STD-001-83)},
 	url		= {http://csrc.nist.gov/publications/history/dod85.pdf},
@@ -452,7 +452,7 @@
 	title		= {With Microscope and Tweezers: An Analysis of the Internet Virus of November 1988},
 	booktitle	= {IEEE Symposium on Security and Privacy},
 	year		= {1988},
-	month		= {feb},
+	month		= {2},
 	pages		= {326--343},
 	day 		= {9},
 	publisher	= {IEEE Computer Society},
@@ -482,7 +482,7 @@
 	issue_date	= {Jan. 1989},
 	volume 		= {19},
 	number		= {1},
-	month		= {jan},
+	month		= {1},
 	year		= {1989},
 	issn		= {0146-4833},
 	pages		= {17--57},
@@ -596,7 +596,7 @@
 	booktitle	= {Proceedings of SECURICOM '90},
 	series		= {SECURICOM '90},
 	year		= {1990},
-	month		= {mar},
+	month		= {3},
 	pages		= {123--137},
 	numpages	= {14},
 	language	= {English},
@@ -607,7 +607,7 @@
 	title		= {128-bit hash function (N-Hash)},
 	journal		= {NTT Review},
 	year		= {1990},
-	month		= {nov},
+	month		= {11},
 	volume  	= {2},
 	number  	= {6},
 	pages		= {128--132},
@@ -668,7 +668,7 @@
 	author		= {Raggett, Dave and Hors, Arnaud Le and Jacobs, Ian},
 	file 		= {HTML 4.01 Specification.pdf:HTML 4.01 Specification.pdf:PDF},
 	howpublished	= {W3C Recommendation},
-	month		= {dec},
+	month		= {12},
 	title 		= {HTML 4.01 Specification},
 	url 		= {http://www.w3.org/TR/html4},
 	year 		= 1999,
@@ -680,7 +680,7 @@
 	title		= {О процессе принятия AES},
 	journal		= {Компьютерра},
 	year		= {1999},
-	month		= {dec},
+	month		= {12},
 	number  	= {49},
 	issn		= {1815-2198},
 	url		= {http://kiwibyrd.chat.ru/aes/aes2.htm},
@@ -715,7 +715,7 @@
 	title		= {FIPS PUB 197 Federal Information Processing Standards Publication. Advanced Encryption Standard (AES)},
 	note		= {U.S.Department of Commerce/National Institute of Standards and Technology},
 	year		= {2001},
-	month		= {nov},
+	month		= {11},
 	url		= {http://csrc.nist.gov/publications/fips/fips197/fips-197.pdf},
 	language	= {English},
 }
@@ -753,7 +753,7 @@
 @techreport{NIST:2001,
 	author		= {Rukhin, Andrew and Soto, Juan and Nechvatal, James and Smid, Miles amd Barker, Elaine and Leigh, Stefan and Levenson, Mark and Vangel, Mark and Banks, David and Heckert, Alan Dray, James and Vo, San},
 	year		= {2001},
-	month		= {may},
+	month		= {5},
 	day		= {15},
 	institution	= {Booz Allen \& Hamilton},
 	journal		= {NIST Special Publication 800-22 (with revisions dated May 15, 2001)},
@@ -910,7 +910,7 @@
 	publisher	= {IETF},
 	organization	= {Internet Engineering Task Force},
 	year		= {2005},
-	month		= {dec},
+	month		= {12},
 	note		= {Updated by RFC 6040},
 	url		= {http://www.ietf.org/rfc/rfc4301.txt},
 	language	= {English},
@@ -925,7 +925,7 @@
 	publisher	= {IETF},
 	organization	= {Internet Engineering Task Force},
 	year		= {2005},
-	month		= {dec},
+	month		= {12},
 	note		= {Obsoleted by RFC 5996, updated by RFC 5282},
 	url		= {http://www.ietf.org/rfc/rfc4306.txt},
 	language	= {English},
@@ -1072,7 +1072,7 @@
 	year		= {2010},
 	volume		= {2},
 	issue		= {2},
-	month		= {Aug},
+	month		= {8},
 	pages		= {7--12},
 	url		= {http://hdl.handle.net/10261/32671},
 	language	= {English}
@@ -1140,7 +1140,7 @@
 @techreport{NIST:SP800:57,
 	author		= {Barker, Elaine and Barker, William and Burr, William and Polk, William and Smid, Miles},
 	year		= {2012},
-	month		= {July},
+	month		= {7},
 	address		= {Gaithersburg},
 	institution	= {National Institute of Standards {and} Technology ({NIST})},
 	type		= {{NIST} Special Publication 800-57, revised},
@@ -1192,7 +1192,7 @@
 	publisher	= {IETF},
 	organization	= {Internet Engineering Task Force},
 	year		= {2014},
-	month		= {jun},
+	month		= {6},
 	url		= {http://www.ietf.org/rfc/rfc7230.txt},
 	language	= {English},
 }
@@ -1217,7 +1217,7 @@
 	publisher	= {IETF},
 	organization	= {Internet Engineering Task Force},
 	year		= {2015},
-	month		= {feb},
+	month		= {2},
 	url		= {http://www.ietf.org/rfc/rfc7465.txt},
 	language	= {English},
 }
