Добавлена глава про квантовый протокол BB84

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -377,6 +377,16 @@
 	language	= {English},
 }
 
+@inproceedings{Bennett:Brassard:1984,
+	author		= {Bennett, Charles Henry and Brassard, Gilles},
+	title		= {Quantum Cryptography: Public Key Distribution and Coin Tossing},
+	booktitle	= {Proceedings of International Conference on Computers, Systems & Signal Processing, Dec. 9-12, 1984, Bangalore, India},
+	pages		= {175},
+	publisher	= {IEEE},
+	year		= {1984},
+	language	= {English},
+}
+
 @inproceedings{ElGamal:1985,
 	author		= {El Gamal, Taher},
 	title		= {A Public Key Cryptosystem and a Signature Scheme Based on Discrete Logarithms},
@@ -701,16 +711,6 @@
 	language	= {Russian},
 }
 
-@book{Totty:2002,
-	author		= {Totty, Brian and Gourley, David and Sayer, Marjorie and Aggarwal, Anshu and Reddy, Sailu},
-	title		= {Http: The Definitive Guide},
-	year		= {2002},
-	isbn		= {1-56592-509-2},
-	publisher	= {O'Reilly \& Associates, Inc.},
-	address		= {Sebastopol, CA, USA},
-	language	= {English},
-}
-
 @misc{FIPS-PUB-197,
 	title		= {FIPS PUB 197 Federal Information Processing Standards Publication. Advanced Encryption Standard (AES)},
 	note		= {U.S.Department of Commerce/National Institute of Standards and Technology},
@@ -786,6 +786,30 @@
 	author		= {Fluhrer, Scott and Mantin, Itsik and Shamir, Adi},
 	pages		= {1--24},
 	language	= {English}
+}
+
+@article{Mayers:2001,
+	author		= {Mayers, Dominic},
+	title		= {Unconditional Security in Quantum Cryptography},
+	journal		= {Journal of the ACM},
+	year		= {2001},
+	month		= {5},
+	volume		= {48},
+	number		= {3},
+	pages		= {351–406},
+	address		= {New York, NY, USA},
+	doi		= {10.1145/382780.382781},
+	language	= {English},
+}
+
+@book{Totty:2002,
+	author		= {Totty, Brian and Gourley, David and Sayer, Marjorie and Aggarwal, Anshu and Reddy, Sailu},
+	title		= {Http: The Definitive Guide},
+	year		= {2002},
+	isbn		= {1-56592-509-2},
+	publisher	= {O'Reilly \& Associates, Inc.},
+	address		= {Sebastopol, CA, USA},
+	language	= {English},
 }
 
 @article{aks:2002,
@@ -937,6 +961,17 @@
 	year		= {2005},
 	isbn		= {978-0-201-85392-6},
 	publisher	= {Addison-Wesley Professional},
+	language	= {English},
+}
+
+@inproceedings{Watanabe:Matsumoto:Uyematsu:2005,
+	author		= {Watanabe, Shun and Matsumoto, Ryutaroh and Uyematsu, R},
+	title		= {Noise tolerance of the BB84 protocol with random privacy amplification},
+	booktitle	= {Information Theory, 2005. ISIT 2005. Proceedings. International Symposium on},
+	pages		= {1013-1017},
+	publisher	= {IEEE},
+	year		= {2005},
+	month		= {9},
 	language	= {English},
 }
 
