--- a/key_distribution_protocols.tex
+++ b/key_distribution_protocols.tex
@@ -148,5 +148,4 @@
 
 \input{bloms_scheme}
 
-В этом разделе были рассмотрены протоколы, в которых ключи вырабатываются в процессе обмена информацией.
-%Существует и другой подход, который будет рассмотрен в следующих разделах.
+\input{quantum_protocols}
