Fix & usage in .bib

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -380,7 +380,7 @@
 @inproceedings{Bennett:Brassard:1984,
 	author		= {Bennett, Charles Henry and Brassard, Gilles},
 	title		= {Quantum Cryptography: Public Key Distribution and Coin Tossing},
-	booktitle	= {Proceedings of International Conference on Computers, Systems & Signal Processing, Dec. 9-12, 1984, Bangalore, India},
+	booktitle	= {Proceedings of International Conference on Computers, Systems \& Signal Processing, Dec. 9-12, 1984, Bangalore, India},
 	pages		= {175},
 	publisher	= {IEEE},
 	year		= {1984},
