Переделана секция про бесключевой протокол Шамира, добавлено общее описание, тривиальный случай и случай Шамира вынесены как подсекции

--- a/foreword.tex
+++ b/foreword.tex
@@ -76,7 +76,7 @@
 	\item[] Антон Митрохин\begin{tiny} (201-216 гр.)\end{tiny}
 	\item[] Надежда Мозолина\begin{tiny} (201-119 гр.)\end{tiny}
 
-	\item[] Хыу Чунг Нгуен\begin{tiny} (201-015 гр.)\end{tiny}
+	\item[] Хыу Чунг Нгуен\begin{tiny} (201-015 гр.)\end{tiny} %huutrung
 	\item[] Артём Никитин\begin{tiny} (201-012 гр.)\end{tiny}
 	\item[] Евгения Никольская\begin{tiny} (201-115 гр.)\end{tiny}
 
