--- a/key_distribution_protocols.tex
+++ b/key_distribution_protocols.tex
@@ -3,8 +3,6 @@
 
 Задачей распространения ключей между двумя пользователями является создание секретных псевдослучайных сеансовых ключей шифрования и аутентификации сообщений. Пользователи предварительно создают и обмениваются ключами аутентификации один раз. В дальнейшем для создания защищённой связи пользователи производят взаимную аутентификацию и вырабатывают сеансовые ключи\index{ключ!сеансовый}.
 
-\input{shamirs_three-step_protocol}
-
 \section{Симметричные протоколы}
 
 \subsection{Аутентификация и атаки воспроизведения}
@@ -85,6 +83,8 @@
 Заметим, что криптоаналитик может добавить в поле случайную последовательность, тогда вместо $K$ получаем <<$K$ плюс помеха>>. Вмешательство криптоаналитика будет выявлено благодаря наличию четвёртого поля в сообщении. Используя полученное значение $K$, вычисляют $\MAC_{K_{AB}}(K, t_A, B)$ и сравнивают с четвёртым полем. Если значения совпадают, то вмешательства криптоаналитика не было.
 
 \input{needham-schroeder_protocol}
+
+\input{three-pass_protocols}
 
 \section{Асимметричные протоколы}
 
