--- a/foreword.tex
+++ b/foreword.tex
@@ -59,6 +59,7 @@
 	\item[] Александр Кротов\begin{tiny} (201-011 гр.)\end{tiny}
 	\item[] Ефим Крохин\begin{tiny} (201-217 гр.)\end{tiny}
 	\item[] Станислав Круглик\begin{tiny} (201-111 гр.)\end{tiny}
+	\item[] Павел Крюков\begin{tiny} (200-916 гр.)\end{tiny} %pavelkryukov
 	\item[] Егор Кузнецов\begin{tiny} (201-211 гр.)\end{tiny}
 	\item[] Зулкаид Курбанов\begin{tiny} (201-113 гр.)\end{tiny}
 
