Revert recent introduction hebrew alphabet due to build complications

--- a/Information Security.tex
+++ b/Information Security.tex
@@ -43,7 +43,7 @@
 \usepackage{tablefootnote}		% footnote в таблицах
 \usepackage{wrapfig}			% sub figures
 \usepackage{textcomp}                   % \No support
-\usepackage{cjhebrew}
+%\usepackage{cjhebrew}
 
 \usepackage[left=1.84cm, right=1.5cm, paperwidth=14cm, top=1.8cm, bottom=2cm, height=19.8cm, paperheight=20cm]{geometry}
 \usepackage[parentracker=true,
