--- a/Short_history_of_cryptography.tex
+++ b/Short_history_of_cryptography.tex
@@ -19,7 +19,7 @@
 	\item \texttt{Иер. 51:41}: Как взят Сесах, и завоевана слава всей земли! Как сделался Вавилон ужасом между народами!
 \end{itemize}
 
-В этих отрывках слово <<Сесах>> относится к государству, не упоминаемому в других источниках, но если в написании слова <<Сесах>> на иврите (\cjRL{/s/sK}) заменить первую букву алфавита на последнюю, вторую на предпоследнюю и так далее, то получится <<Бавель>> (\cjRL{bbl})~--- одно из названий Вавилона.
+В этих отрывках слово <<Сесах>> относится к государству, не упоминаемому в других источниках, но если в написании слова <<Сесах>> на иврите (\emph{син-син-каф}) заменить первую букву алфавита на последнюю, вторую на предпоследнюю и так далее, то получится <<Бавель>> (\emph{бет-бет-ламед})~--- одно из названий Вавилона. % \cjRL{/s/sK} \cjRL{bbl}
 Таким образом, с помощью техники <<атбаш>> авторы манускрипта скрывали отдельные названия, оставляя б\'{о}льшую часть текста без шифрования. Возможно, это делалось в том числе и для того, чтобы не иметь проблем с распространением текстов на территории, подконтрольной Вавилону. Шифр <<атбаш>>\index{шифр!атбаш} можно рассматривать как пример моноалфавитного афинного шифра (см. раздел~\ref{section-affine-cipher}).
 
 Сразу несколько техник защищённой передачи сообщений связывают с именем Энея Тактика, полководца IV~века до~н.~э.
