--- a/monoalphabetic_ciphers.tex
+++ b/monoalphabetic_ciphers.tex
@@ -54,6 +54,6 @@
 Расшифрование осуществляется по формуле
     \[ x = (y - b) a^{-1} \mod n. \]
 
-Чтобы обеспечить обратимость в этом шифре, должен существовать единственный обратный элемент $a^{-1}$ по модулю $n$. Для этого должно выполняться условие $\gcd(a,n) = 1$, то есть $a$ и $n$ должны быть взаимно простыми числами ($\gcd$ -- обозначение термина с английского greatest common divisor -- наибольший общий делитель, $\text{НОД}$). Очевидно, что для <<взлома>> такого шифра достаточно найти две пары букв -- две замены.
+Чтобы обеспечить обратимость в этом шифре, должен существовать единственный обратный элемент $a^{-1}$ по модулю $n$. Для этого должно выполняться условие $\gcd(a,n) = 1$, то есть $a$ и $n$ должны быть взаимно простыми числами ($\gcd$ -- сокращение, образованное от термина greatest common divisor -- наибольший общий делитель, $\text{НОД}$). Очевидно, что для <<взлома>> такого шифра достаточно найти две пары букв -- две замены.
 
 \index{шифр!моноалфавитный|)}
