Corrected Vigener cipher table.

--- a/vigeneres_cipher.tex
+++ b/vigeneres_cipher.tex
@@ -7,32 +7,32 @@
 
 \begin{center} \resizebox{\textwidth}{!}{ \begin{tabular}{|c|*{24}c|}
     \hline
-    $\quad \downarrow ~ \rightarrow$ & \textbf{A} & \textbf{B} & \textbf{C} & \textbf{D} & \textbf{E} & \textbf{F} & \textbf{G} & \textbf{H} & \textbf{I} & \textbf{K} & \textbf{L} & \textbf{M} & \textbf{N} & \textbf{O} & \textbf{P} & \textbf{Q} & \textbf{R} & \textbf{S} & \textbf{T} & \textbf{U} & \textbf{X} & \textbf{Y} & \textbf{Z} & \textbf{W} \\
+    $\quad \downarrow ~ \rightarrow$ & \textbf{A} & \textbf{B} & \textbf{C} & \textbf{D} & \textbf{E} & \textbf{F} & \textbf{G} & \textbf{H} & \textbf{I} & \textbf{K} & \textbf{L} & \textbf{M} & \textbf{N} & \textbf{O} & \textbf{P} & \textbf{Q} & \textbf{R} & \textbf{S} & \textbf{T} & \textbf{U} & \textbf{W} & \textbf{X} & \textbf{Y} & \textbf{Z} \\
     \hline
-    \textbf{A} & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & X & Y & Z & W \\
-    \textbf{B} & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & X & Y & Z & W & A \\
-    \textbf{C} & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & X & Y & Z & W & A & B \\
-    \textbf{D} & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & X & Y & Z & W & A & B & C \\
-    \textbf{E} & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & X & Y & Z & W & A & B & C & D \\
-    \textbf{F} & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & X & Y & Z & W & A & B & C & D & E \\
-    \textbf{G} & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & X & Y & Z & W & A & B & C & D & E & F \\
-    \textbf{H} & H & I & K & L & M & N & O & P & Q & R & S & T & U & X & Y & Z & W & A & B & C & D & E & F & G \\
-    \textbf{I} & I & K & L & M & N & O & P & Q & R & S & T & U & X & Y & Z & W & A & B & C & D & E & F & G & H \\
-    \textbf{K} & K & L & M & N & O & P & Q & R & S & T & U & X & Y & Z & W & A & B & C & D & E & F & G & H & I \\
-    \textbf{L} & L & M & N & O & P & Q & R & S & T & U & X & Y & Z & W & A & B & C & D & E & F & G & H & I & K \\
-    \textbf{M} & M & N & O & P & Q & R & S & T & U & X & Y & Z & W & A & B & C & D & E & F & G & H & I & K & L \\
-    \textbf{N} & N & O & P & Q & R & S & T & U & X & Y & Z & W & A & B & C & D & E & F & G & H & I & K & L & M \\
-    \textbf{O} & O & P & Q & R & S & T & U & X & Y & Z & W & A & B & C & D & E & F & G & H & I & K & L & M & N \\
-    \textbf{P} & P & Q & R & S & T & U & X & Y & Z & W & A & B & C & D & E & F & G & H & I & K & L & M & N & O \\
-    \textbf{Q} & Q & R & S & T & U & X & Y & Z & W & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P \\
-    \textbf{R} & R & S & T & U & X & Y & Z & W & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q \\
-    \textbf{S} & S & T & U & X & Y & Z & W & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R \\
-    \textbf{T} & T & U & X & Y & Z & W & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S \\
-    \textbf{U} & U & X & Y & Z & W & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T \\
-    \textbf{X} & X & Y & Z & W & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U \\
-    \textbf{Y} & Y & Z & W & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & X \\
-    \textbf{Z} & Z & W & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & X & Y \\
-    \textbf{W} & W & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & X & Y & Z \\
+    \textbf{A} & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & W & X & Y & Z  \\
+    \textbf{B} & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & W & X & Y & Z & A \\
+    \textbf{C} & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & W & X & Y & Z & A & B \\
+    \textbf{D} & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & W & X & Y & Z & A & B & C \\
+    \textbf{E} & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & W & X & Y & Z & A & B & C & D \\
+    \textbf{F} & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & W & X & Y & Z & A & B & C & D & E \\
+    \textbf{G} & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & W & X & Y & Z & A & B & C & D & E & F \\
+    \textbf{H} & H & I & K & L & M & N & O & P & Q & R & S & T & U & W & X & Y & Z & A & B & C & D & E & F & G \\
+    \textbf{I} & I & K & L & M & N & O & P & Q & R & S & T & U & W & X & Y & Z & A & B & C & D & E & F & G & H \\
+    \textbf{K} & K & L & M & N & O & P & Q & R & S & T & U & W & X & Y & Z & A & B & C & D & E & F & G & H & I \\
+    \textbf{L} & L & M & N & O & P & Q & R & S & T & U & W & X & Y & Z & A & B & C & D & E & F & G & H & I & K \\
+    \textbf{M} & M & N & O & P & Q & R & S & T & U & W & X & Y & Z & A & B & C & D & E & F & G & H & I & K & L \\
+    \textbf{N} & N & O & P & Q & R & S & T & U & W & X & Y & Z & A & B & C & D & E & F & G & H & I & K & L & M \\
+    \textbf{O} & O & P & Q & R & S & T & U & W & X & Y & Z & A & B & C & D & E & F & G & H & I & K & L & M & N \\
+    \textbf{P} & P & Q & R & S & T & U & W & X & Y & Z & A & B & C & D & E & F & G & H & I & K & L & M & N & O \\
+    \textbf{Q} & Q & R & S & T & U & W & X & Y & Z & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P \\
+    \textbf{R} & R & S & T & U & W & X & Y & Z & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q \\
+    \textbf{S} & S & T & U & W & X & Y & Z & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R \\
+    \textbf{T} & T & U & W & X & Y & Z & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S \\
+    \textbf{U} & U & W & X & Y & Z & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T \\
+    \textbf{W} & W & X & Y & Z & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U \\
+    \textbf{X} & X & Y & Z & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & W \\
+    \textbf{Y} & Y & Z & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & W & X \\
+    \textbf{Z} & Z & A & B & C & D & E & F & G & H & I & K & L & M & N & O & P & Q & R & S & T & U & W & X & Y \\
     \hline
 \end{tabular} } \end{center}
 
