--- a/euclidean_algorithm.tex
+++ b/euclidean_algorithm.tex
@@ -56,13 +56,13 @@
         $-1$ &  --- & $136$ &   $1$ &   $0$ & $136 =$ & $ 1 \cdot 136$ & $ + 0 \cdot 36$ \\
 	 $0$ &  --- &  $36$ &   $0$ &   $1$ &  $36 =$ & $ 0 \cdot 136$ & $ + 1 \cdot 36$ \\
 	 $1$ &  $3$ &  $28$ &  $+1$ &  $-3$ &  $28 =$ & $+1 \cdot 136$ & $ - 3 \cdot 36$ \\
-	 $2$ &  $1$ &   $8$ &  $-1$ &  $+4$ &   $8 =$ & $-1 \cdot 136$ & $ + 4 \cdot 36$ \\
-	 $3$ &  $3$ &   $4$ &  $+5$ & $-19$ &  $-4 =$ & $+5 \cdot 136$ & $- 19 \cdot 36$ \\
+	 $2$ &  $1$ &   $8$ &  $-1$ &  $+4$ &  $8 =$ & $-1 \cdot 136$ & $ + 4 \cdot 36$ \\
+	 $3$ &  $3$ &   $4$ &  $+4$ & $-15$ &  $4 =$ & $+4 \cdot 136$ & $ -15 \cdot 36$ \\
 	 $4$ &  $2$ &   $0$ &   --- &   --- & & & --- \\
         \hline
     \end{tabular}
 \end{table}
-Найдено $x = 5, ~ y = -19, ~ d = 4$.
+Найдено $x = 4, ~ y = -15, ~ d = 4$.
 \exampleend
 
 \subsection[Нахождение мультипликативного обратного]{Нахождение мультипликативного \protect\\ обратного по модулю}
