--- a/perfect_secure_systems.tex
+++ b/perfect_secure_systems.tex
@@ -120,7 +120,7 @@ H(K)\geq H(K|C)\geq H(M|C).
 
 Пусть сообщение представлено двоичной последовательностью длины $N$:
     \[ m = (m_1, m_2, \dots, m_N). \]
-Распределение вероятностей сообщений $P_m(m)$ может быть любым. Ключ также представлен двоичной последовательностью $ k = (k_1, k_2, \dots, k_N)$ той же длины, но с равномерным распределением
+Распределение вероятностей сообщений $P_m(m)$ может быть любым. Ключ также представлен двоичной последовательностью $ k = (k_1, k_2, \dots, k_N)$ той же длины, но с равномерным распределением:
     \[ P_k(k) = \frac{1}{2^N} \]
 для всех ключей.
 
