--- a/perfect_secure_systems.tex
+++ b/perfect_secure_systems.tex
@@ -130,7 +130,7 @@ H(K)\geq H(K|C)\geq H(M|C).
 Легальный пользователь знает ключ и осуществляет расшифрование:
     \[ M =C \oplus K = (c_1 \oplus k_1, ~ c_2 \oplus k_2, \dots, c_N \oplus k_N). \]
 
-Найдём вероятностное распределение $N$-блоков шифртекстов, используя формулу
+Найдём вероятностное распределение $N$-блоков (блоков, состоящих из N символов) шифртекстов, используя формулу
 \begin{multline*}
 P(c = a) = P(m \oplus k = a) = \sum_{m} P(m) P(m \oplus k = a | m) = \\
 = \sum_{m} P(m) P(k \oplus m) = \sum_{m} P(m) \frac{1}{2^N} = \frac{1}{2^N}. 
