Fixed participle turnover, logical error.

--- a/unicity_distance.tex
+++ b/unicity_distance.tex
@@ -79,7 +79,7 @@ n_u \approx \frac{l_K}{\rho}.
 \rho _{ru, \text{\textit{UTF-8}}} \approx 1 - \frac{ 3{,}0 }{ \log _2 {2^{16}} } \approx 0{,}81.
 \end{gather*} 
 
-Подставляя полученные числа в выражение~\ref{eq:unicity_distance_simple_frac} для шифров DES\index{шифр!DES} и AES\index{шифр!AES}, получаем таблицу~\ref{table:unicity_distances}.
+Подставим полученные значения в выражение~\ref{eq:unicity_distance_simple_frac} для шифров DES\index{шифр!DES} и AES\index{шифр!AES}. Запишем результаты в таблицу~\ref{table:unicity_distances}.
 
 \begin{table}[!ht]
 	\centering
