Fixed verb number.

--- a/lucifer.tex
+++ b/lucifer.tex
@@ -5,7 +5,7 @@
 
 \begin{figure}[!t]
     \centering
-    \subcaptionbox{S-блок. На вход поступает 3 бита информации, которые трактуются как двоичное представление номера одной из $2^3$ линий внутреннего p-блока. На выходе номер активной сигнальной дорожки обратно преобразуется в 3-битовое представление\label{fig:s-box-inside}}{ \includegraphics[width=0.66\textwidth]{pic/s-box-inside}}
+    \subcaptionbox{S-блок. На вход поступают 3 бита информации, которые трактуются как двоичное представление номера одной из $2^3$ линий внутреннего p-блока. На выходе номер активной сигнальной дорожки обратно преобразуется в 3-битовое представление\label{fig:s-box-inside}}{ \includegraphics[width=0.66\textwidth]{pic/s-box-inside}}
     ~~~
     \subcaptionbox{P-блок. Все поступающие на вход биты не меняются, но перемешиваются внутри блока\label{fig:p-box-inside}}{ \includegraphics[width=0.25\textwidth]{pic/p-box-inside}}
 		\caption{Возможные реализации s- и p-блоков}
