Fixed Footnote division in 2 pages.

--- a/lucifer.tex
+++ b/lucifer.tex
@@ -1,3 +1,4 @@
+\interfootnotelinepenalty=10000
 \section{SP-сети. Проект «Люцифер»}\label{section-project-lucifer}\index{шифр!«Люцифер»|(}
 \selectlanguage{russian}
 
