Fixed illogical sentence order.

--- a/AES.tex
+++ b/AES.tex
@@ -74,7 +74,7 @@ AES -- это раундовый\index{шифр!раундовый} блочны
   \item добавление текущего ключа, $\mathsf{AddRoundKey}$.
 \end{itemize}
 
-В последнем раунде исключается операция <<перемешивание столбцов>>. В обозначениях, близких к языку С, можно записать программу в следующем виде:
+В обозначениях, близких к языку С, можно записать программу в следующем виде:
 \[
     \begin{array}{l}
         \mathsf{Round(State, RoundKey)} \{ \\
@@ -85,7 +85,7 @@ AES -- это раундовый\index{шифр!раундовый} блочны
         \} \\
     \end{array}
 \]
-Последний раунд слегка отличается, и его можно записать в следующем виде:
+В последнем раунде исключается операция <<перемешивание столбцов>>. Этот раунд можно записать в следующем виде:
 \[
     \begin{array}{l}
         \mathsf{Round(State, RoundKey)} \{ \\
