--- a/Block_cipher_modes.tex
+++ b/Block_cipher_modes.tex
@@ -22,7 +22,7 @@
 В режиме электронной кодовой книги (\langen{Electronic Code Book, ECB}) открытый текст в пакете разделён на блоки
     \[ \left[ M_1, M_2, \dots, M_{n-1}, M_n \right]. \]
 
-В процессе шифрования каждому блоку $M_j$ соответствует свой шифртекст $C_j$, определяемый с помощью ключа $K$:
+В процессе шифрования каждому блоку $M_j$ ставится в соответствие шифртекст $C_j$, определяемый с помощью ключа $K$:
     \[ C_j = E_K(M_j), ~ j = 1, 2, \dots, n. \]
 
 Если в открытом тексте есть одинаковые блоки, то в шифрованном тексте им также соответствуют одинаковые блоки. Это даёт дополнительную информацию для криптоаналитика, что является недостатком этого режима. Другой недостаток состоит в том, что криптоаналитик может подслушивать, перехватывать, переставлять, воспроизводить ранее записанные блоки, нарушая конфиденциальность\index{конфиденциальность} и целостность\index{целостность} информации. Поэтому при работе в режиме электронной кодовой книги нужно вводить аутентификацию сообщений.
