Added abbreviation explanation.

--- a/lfsr.tex
+++ b/lfsr.tex
@@ -1,7 +1,7 @@
 \section[РСЛОС]{Регистр сдвига с линейной обратной связью}\label{section-lfsr}
 \selectlanguage{russian}
 
-Другой схемой построения псевдослучайных генераторов является использование регистров сдвига с линейной обратной связью, а также их вариациями. Для начала рассмотрим простой РСЛОС, изображённый на рисунке~\ref{fig:lfsr}.
+Другой схемой построения псевдослучайных генераторов является использование регистров сдвига с линейной обратной связью, а также их вариациями. Для начала рассмотрим простой РСЛОС (регистр сдвига с линейной обратной связью), изображённый на рисунке~\ref{fig:lfsr}.
 
 \begin{figure}[thb]
 	\centering
