Word ordering fix.

--- a/crypto-random.tex
+++ b/crypto-random.tex
@@ -14,7 +14,7 @@
 	b \left( LFSR \right) = 2 \cdot size\left( g \right). \\
 \end{array}\]
 
-То есть, если мы решим увеличить размер внутреннего состояния для защиты от криптоаналитика, это приведёт не более чем к линейному росту затрат последнего на необходимые вычисления (сравните это с экспоненциальным ростом затрат криптоаналитика при увеличении размера ключа для блочных шифров). Поэтому для использования в криптографии к генераторам псевдослучайных чисел предъявляются дополнительные требования.
+То есть, если мы решим увеличить размер внутреннего состояния для защиты от криптоаналитика, это приведёт к не более чем линейному росту затрат последнего на необходимые вычисления (сравните это с экспоненциальным ростом затрат криптоаналитика при увеличении размера ключа для блочных шифров). Поэтому для использования в криптографии к генераторам псевдослучайных чисел предъявляются дополнительные требования.
 
 \emph{Криптографически стойким генератором псевдослучайных чисел} будем называть функцию $g$ вида
 	\[g: \left\{0, 1\right\}^{n} \to \left\{0, 1\right\}^{q\left(n\right)},\] 
