--- a/quantum_protocols.tex
+++ b/quantum_protocols.tex
@@ -102,11 +102,11 @@
 
 Далее Боб сообщает по открытому общедоступному классическому каналу связи, какие именно базисы поляризации использовались, а Алиса указывает, какие из них совпали с изначально выбранными. При этом сами измеренные значения (прошёл фотон через поляризатор или нет) Боб оставляет в секрете.
 
-Можно сказать, что Алиса и Боб публикуют значения сгенерированных ими случайных величин $A$ и $B$. Примерно в половине случаев эти значения совпадут (когда Алиса подтверждает правильность выбора базиса поляризации). Для тех фотонов, у которых значения $A$ и $B$ совпали, совпадут и значения $X_A$ и $X_{B1}$. То есть
+Можно сказать, что Алиса и Боб публикуют значения сгенерированных ими случайных величин $A$ и $B$. Примерно в половине случаев эти значения совпадут (когда Алиса подтверждает правильность выбора базиса поляризации). Для тех фотонов, у которых значения $A$ и $B$ совпали, совпадут и значения $X_A$ и $X_{B1}$. То есть:
 
 \begin{itemize}
-	\item $H \left( X_{B1} | X_A; A = B \right) = 0~\text{бит}$
-	\item $I \left( X_{B1} ; X_A | A = B \right) = 1~\text{бит}$
+	\item $H \left( X_{B1} | X_A; A = B \right) = 0~\text{бит}$,
+	\item $I \left( X_{B1} ; X_A | A = B \right) = 1~\text{бит}$.
 \end{itemize}
 
 Для тех фотонов, для которых Боб выбрал неправильный базис поляризации, значения $X_{B1}$ и $X_{A}$ будут представлять собой независимые случайные величины (так как, например, при исходной диагональной поляризации фотона он пройдёт и через вертикальную, и через горизонтальную щель с вероятностью 50\%):
