--- a/quantum_protocols.tex
+++ b/quantum_protocols.tex
@@ -97,7 +97,7 @@
 
 \begin{itemize}
 	\item $X_{B1} = f \left( Y_A, B \right);$
-	\item $X_{B2} = f \left( Y_E, B \right);$
+	\item $X_{B2} = f \left( Y_E, B \right).$
 \end{itemize}
 
 Далее Боб сообщает по открытому общедоступному классическому каналу связи, какие именно базисы поляризации использовались, а Алиса указывает, какие из них совпали с изначально выбранными. При этом сами измеренные значения (прошёл фотон через поляризатор или нет) Боб оставляет в секрете.
