--- a/quantum_protocols.tex
+++ b/quantum_protocols.tex
@@ -112,8 +112,8 @@
 Для тех фотонов, для которых Боб выбрал неправильный базис поляризации, значения $X_{B1}$ и $X_{A}$ будут представлять собой независимые случайные величины (так как, например, при исходной диагональной поляризации фотона он пройдёт и через вертикальную, и через горизонтальную щель с вероятностью 50\%):
 
 \begin{itemize}
-	\item $H \left( X_{B1} | X_A; A \neq B \right) = 1~\text{бит}$
-	\item $I \left( X_{B1} ; X_A | A \neq B \right) = 0~\text{бит}$
+	\item $H \left( X_{B1} | X_A; A \neq B \right) = 1~\text{бит},$
+	\item $I \left( X_{B1} ; X_A | A \neq B \right) = 0~\text{бит}.$
 \end{itemize}
 
 Рассмотрим случай, когда Ева вмешалась в процесс передачи информации между Алисой и Бобом и отправляет Бобу уже свои фотоны, но не имеет возможности изменять информацию, которой Алиса и Боб обмениваются по классическому каналу связи. Как и прежде, Боб отправляет Алисе выбранные базисы поляризации (значения $B$), а Алиса указывает, какие из них совпали с выбранными ею значениями $A$.
