--- a/quantum_protocols.tex
+++ b/quantum_protocols.tex
@@ -125,7 +125,7 @@
 	\item Боб должен угадать базис поляризации Евы ($B = E$).
 \end{itemize}
 
-Рассмотрим, без ограничения общности, вариант, когда Алиса использовала диагональную поляризацию <<×>>:
+Рассмотрим без ограничения общности вариант, когда Алиса использовала диагональную поляризацию <<×>>:
 
 \begin{tabular}{ | c | c | c | c | }
 \hline
