Added missing dot.

--- a/three-pass_protocols.tex
+++ b/three-pass_protocols.tex
@@ -3,10 +3,10 @@
 
 Если между Алисой и Бобом существует канал связи, недоступный для модификации зломышленником (то есть когда применима модель только пассивного криптоаналитика), то даже без предварительного обмена секретными ключами или другой информацией можно воспользоваться идеями, использованными ранее в криптографии на открытых ключах. После описания RSA в 1978 году, в 1980 Ади Шамир предложил использовать криптосистемы, основанные на коммутативных операциях, для передачи информации без предварительного обмена секретными ключами. Если предположить, что передаваемой информацией является выработанной одной из сторон секретный сеансовый ключ, то в общем виде мы получаем следующий трёхпроходной протокол.
 
-Предварительно:
+Предварительно установим:
 
 \begin{itemize}
-	\item Стороны $A$ и $B$ соединены незащищённым каналом связи
+	\item Стороны $A$ и $B$ соединены незащищённым каналом связи.
 	\item Каждая из сторон имеет пару из открытого и закрытого ключей $K_A$, $k_A$, $K_B$, $k_B$ соответственно.
 	\item Сторонами выбрана и используется коммутативная функция шифрования:
 	\begin{align*}
