--- a/three-pass_protocols.tex
+++ b/three-pass_protocols.tex
@@ -35,7 +35,7 @@
 
 \subsection[Тривиальный случай]{Тривиальный случай}
 
-Приведём пример протокола на основе такой <<неудачно>> с точки зрения безопасности функции, как XOR.
+Приведём пример протокола на основе такой <<неудачной>> с точки зрения безопасности функции, как XOR.
 
 \begin{enumerate}
     \item $A$ имеет функцию шифрования совершенной секретности $E_{K_A}(K) = K \oplus K_A$, где $K_A$ -- двоичная последовательность с равномерным распределением символов. $A$ посылает это сообщение стороне $B$:
