Fixed incorrect word ordering.

--- a/elliptic_curve_cryptography.tex
+++ b/elliptic_curve_cryptography.tex
@@ -1,7 +1,7 @@
 \section{Эллиптические кривые}\label{section-elliptic-curve-cryptosystems}
 \selectlanguage{russian}
 
-Существуют аналоги криптосистемы Эль-Гамаля, в которых вместо проблемы дискретного логарифма в мультипликативных полях используется проблема дискретного логарифма в группах точек эллиптических кривых над конечными полями (обычно $GF(p)$ либо $GF(2^n)$). Математическое описание данных полей приведено в разделе~\ref{section-math-ec-groups}. Нас же интересует следующий факт, что для группы точек эллиптической кривой над конечным полем $\group{E}$ существует быстро выполнимая операция -- умножение целого числа $x$ на точку $A$ (суммирование точки самой с собой целое число раз):
+Существуют аналоги криптосистемы Эль-Гамаля, в которых вместо проблемы дискретного логарифма в мультипликативных полях используется проблема дискретного логарифма в группах точек эллиптических кривых над конечными полями (обычно $GF(p)$ либо $GF(2^n)$). Математическое описание данных полей приведено в разделе~\ref{section-math-ec-groups}. Нас же интересует следующий факт, что для группы точек эллиптической кривой над конечным полем $\group{E}$ существует быстро выполнимая операция -- умножение целого числа $x$ на точку $A$ (суммирование точки с самой собой целое число раз):
 \[ \begin{array}{l}
 	x \in \group{Z}, \\
 	A, B \in \group{E}, \\
